--- a/scss/components/forms/forms.scss
+++ b/scss/components/forms/forms.scss
@@ -73,14 +73,15 @@ form {
 }
 
 .alert-error{
-    height: 38px;
+    height: 80px;
     width: 100%;
     border: 1px solid #FF3366;
     background-color: rgba(255, 172, 193, 0.6);
     border-radius: 5px;
-    text-align: center;
+    text-align: left;
 
     p {
+        margin: 0;
         padding: 0.5rem;
         font-size: 0.85rem;
         font-weight: 400;
@@ -90,6 +91,7 @@ form {
 
 .alert-success {
     @extend .alert-error;
+    height: 60px;
     border: 1px solid #5aac17;
     background-color: rgba(230, 255, 204, 0.6);
 
