--- a/templates/components/forms/register-form.html
+++ b/templates/components/forms/register-form.html
@@ -6,15 +6,13 @@
         <form id="register-form" name="register-form" action="{{ url_for('register') }}" method="POST">
             <!-- Register form title -->
             <div class="form-group">
-                {% with messages = get_flashed_messages(with_categories=true) %}
-                {% if messages %}
-                {% for category, message in messages %}
-                    <div class="alert-{{ category }}" role="alert">
-                        <p>{{ message }}</p>
-                    </div>
-                {% endfor %}
-                {% endif %}
-                {% endwith %}
+                {% with errors = get_flashed_messages(category_filter=["error"]) %} {% if errors %}
+                <div class="alert-error">
+                    {%- for msg in errors %}
+                    <p>{{ msg }}</p>
+                    {% endfor -%}
+                </div>
+                {% endif %} {% endwith %}
                 <h3 class="form-second-title">Register</h3>
                 <p>You are making your first step to become a Baking Master!</p>
 
