--- a/templates/components/forms/recovery-form.html
+++ b/templates/components/forms/recovery-form.html
@@ -3,16 +3,21 @@
 <div class="recovery-form form-flex">
     <div class="main-form-container">
         <!-- Form container -->
-        <form id="recovery-form" name="recovery-form" method="POST">
+        <form id="recovery-form" name="recovery-form" action="{{ url_for('recovery') }}" method="POST">
             <!-- Register form title -->
             <div class="form-group">
+                {% with messages = get_flashed_messages(with_categories=true) %} {% if messages %} {% for category, message in messages %}
+                <div class="alert-{{category}}">
+                    <p>{{ message }}</p>
+                </div>
+                {% endfor %} {% endif %} {% endwith %}
                 <h3 class="form-second-title">Password recovery</h3>
                 <p>Forgot your password ? <br> Don't worry, simply type your email address and we will send your password back.</p>
             </div>
             <!-- Email input box -->
             <div class="form-group">
-                <label>Email address</label>
-                <input type="email" class="form-control" id="recovery-email" aria-describedby="emailHelp" placeholder="Enter email" required>
+                <label for="recovery_email">Email address</label>
+                <input type="email" class="form-control" name="recovery_email" id="recovery-email" aria-describedby="emailHelp" placeholder="Enter email" required>
             </div>
             <!-- Register button -->
             <div class="form-group">
