--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,13 +7,20 @@
 
 //import componenets styles
 @import 'components/header/nav.scss';
+
 @import 'components/cards/recipe-card.scss';
+
 @import 'components/carousel/carousel.scss';
+
 @import 'components/forms/forms.scss';
 @import 'components/forms/contact-form.scss';
 @import 'components/forms/login-form.scss';
 @import 'components/forms/recovery-form.scss';
 @import 'components/forms/register-form.scss';
+
+@import 'emails/recovery-email.scss';
+@import 'emails/contact-email.scss';
+
 @import 'components/footer/footer.scss';
 
 //import media styles
