--- a/templates/emails/recovery-email.html
+++ b/templates/emails/recovery-email.html
@@ -1,1 +1,7 @@
-<h1 class="">Welcome</h1>
+<h3 class="recovery-email-hello-text">Hi {{ current_user_email }}</h3>
+<p class="-text">You have tried to recover your password or someone else tried.</br>
+    Unfortunatelly our services are enable to send you your password through email, yet.<br> Please send us email back from your current email address and we will delite account so you can create a new one!</p>
+<p class="inconvenience-text">We're very sorry for eny inconvenience.</p>
+<p class="bottom-text">Your lovely<br>
+    <span class="bakin-master-text">Baking Master Team</span>
+</p>
