Recovery email classes created, files moved to different direction

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,8 +18,8 @@
 @import 'components/forms/recovery-form.scss';
 @import 'components/forms/register-form.scss';
 
-@import 'emails/recovery-email.scss';
-@import 'emails/contact-email.scss';
+@import 'components/emails/recovery-email.scss';
+@import 'components/emails/contact-email.scss';
 
 @import 'components/footer/footer.scss';
 
