Emails style fies removed, 'hard' style applied to html email templates

--- a/templates/components/emails/recovery-email.html
+++ b/templates/components/emails/recovery-email.html
@@ -1,5 +1,5 @@
-<h3 class="recovery-email-hello-text">Hello, {{ current_user_email }}!</h3>
-<p class="recovery-email-main-text">You have tried to recover your password or someone else tried.</br>
+<h3 style="">Hello, {{ current_user_email }}!</h3>
+<p style="color: #606060; font-size: 16px;">You have tried to recover your password or someone else tried.</br>
     Unfortunatelly our services are enable to send you your password through email, yet.<br> Please send us email back from your current email address and we will delite account so you can create a new one!</p>
 <p class="inconvenience-text">We're very sorry for eny inconvenience.</p>
 <p class="bottom-text">Your lovely,<br>
