Username variable added, text size changed

--- a/templates/components/emails/recovery-email.html
+++ b/templates/components/emails/recovery-email.html
@@ -1,7 +1,9 @@
-<h3 style="">Hello, {{ current_user_email }}!</h3>
-<p style="color: #606060; font-size: 16px;">You have tried to recover your password or someone else tried.</br>
-    Unfortunatelly our services are enable to send you your password through email, yet.<br> Please send us email back from your current email address and we will delite account so you can create a new one!</p>
-<p class="inconvenience-text">We're very sorry for eny inconvenience.</p>
-<p class="bottom-text">Your lovely,<br>
-    <span class="bakin-master-text">Baking Master Team</span>
-</p>
+<body>
+    <h2 style="">Hello, {{ user }} !</h2>
+    <p style="color: #606060; font-size: 14px;">You have tried to recover your password,.. or someone else tried.</br>
+        Unfortunatelly our services aren't able to send you your password through email, yet.<br> Please send us email back from your current email address and we will delite account so you can create a new one!</p>
+    <p style="color: #606060; font-size: 14px;">We're very sorry for eny inconvenience.</p>
+    <p style="color: #000000; font-size: 14px;"><strong>Your lovely,</strong><br>
+        <span style="color: #FF3355; font-size: 14px;"><strong>Baking Master Team</strong></span>
+    </p>
+</body>
