--- a/templates/components/forms/recovery-form.html
+++ b/templates/components/forms/recovery-form.html
@@ -1,4 +1,4 @@
-<!-- Main login container -->
+<!-- Main recovery form container -->
 <h2 class="hidden">Recovery Form</h2>
 <div class="recovery-form form-flex">
     <div class="main-form-container">
