--- a/templates/components/forms/register-form.html
+++ b/templates/components/forms/register-form.html
@@ -1,4 +1,4 @@
-<!-- Main login container -->
+<!-- Main register-form container -->
 <h2 class="hidden">Register Form</h2>
 <div class="register-form form-flex">
     <div class="main-form-container">
