--- a/templates/components/emails/contact-email.html
+++ b/templates/components/emails/contact-email.html
@@ -1,6 +1,6 @@
 <body>
     <h2 style="">Hello, Baking Master Team!</h2>
-    <p style="color: #606060; font-size: 14px;">{{ message }}</p>
+    <p style="color: #606060; font-size: 14px;">{{ contact_message }}</p>
     <p style="color: #000000; font-size: 14px;"><strong>Regards,</strong><br>
         <span style="color: #FF3355; font-size: 14px;"><strong>{{ username }}</strong></span>
     </p>
