--- a/templates/components/forms/contact-form.html
+++ b/templates/components/forms/contact-form.html
@@ -1,26 +1,33 @@
+<!-- Main contact form container -->
+<h2 class="hidden">Contact Form</h2>
 <div class="contact-form form-flex">
     <div class="main-form-container">
         <!-- Form -->
-        <form id="contact-form" name="contact-form" method="POST">
+        <form id="contact-form" name="contact-form" action="{{ url_for('contact') }}" method="POST">
             <!-- Register form title -->
             <div class="form-group">
+                {% with messages = get_flashed_messages(with_categories=true) %} {% if messages %} {% for category, message in messages %}
+                <div class="contact-alert-{{category}}">
+                    <p>{{ message }}</p>
+                </div>
+                {% endfor %} {% endif %} {% endwith %}
                 <h3 class="form-second-title">Send us a Message</h3>
                 <p class="contact-text">Feel free to contact us. We will try to get back to you ASAP but.., you know COVID-19 also attacked our servers.. hehe. We're here for you 24h/6 days a week.</p>
             </div>
             <!-- Name input box -->
             <div class="form-group">
-                <label>Name</label>
-                <input type="name" class="form-control" id="contact-name" aria-describedby="namelHelp" placeholder="Enter name" required>
+                <label for="contact-name">Name</label>
+                <input type="name" class="form-control" name="contact-name" id="contact-name" aria-describedby="namelHelp" placeholder="Enter name" required>
             </div>
             <!-- Email input box -->
             <div class="form-group">
-                <label>Email address</label>
-                <input type="email" class="form-control" id="contact-email" aria-describedby="emailHelp" placeholder="Enter email" required>
+                <label for="contact-email">Email address</label>
+                <input type="email" class="form-control" name="contact-email" id="contact-email" aria-describedby="emailHelp" placeholder="Enter email" required>
             </div>
             <!-- Text area input -->
             <div class="form-group">
-                <label>Your message</label>
-                <textarea class="form-control" id="contact-message" rows="5" placeholder="..." required></textarea>
+                <label for="contact-message">Your message</label>
+                <textarea class="form-control" name="contact-message" id="contact-message" rows="5" placeholder="..." required></textarea>
             </div>
             <!-- Login button -->
             <div class="form-group contact-form-buttons">
