--- a/templates/components/footer/footer.html
+++ b/templates/components/footer/footer.html
@@ -28,8 +28,8 @@
                 <h4>Newsletter</h4>
                 <p class="newsletter-desc">Sign up for our newsletter! Receive notifications about new recipes, baking equipement and all possible discounts codes. Don't be late, we're waiting for you!</p>
                 <div class="newsletter-form">
-                    <form method="POST" class="newsletter-form" , id="newsletter-form">
-                        <input type="email" name="email-address" id="email" placeholder="Enter your email">
+                    <form name="newsletter-fomr" class="newsletter-form" id="newsletter-form" action="{{ url_for('add_to_newsletter') }}" method="POST">
+                        <input type="email" name="newsletter-email" id="email" placeholder="Enter your email">
                         <button type="submit" class="button" id="newsletter-button">Subscribe</button>
                     </form>
                 </div>
