--- a/templates/components/footer/footer.html
+++ b/templates/components/footer/footer.html
@@ -32,6 +32,13 @@
                         <input type="email" name="newsletter-email" id="newsletter-email" placeholder="Enter your email" required>
                         <button type="submit" class="button" id="newsletter-button">Subscribe</button>
                     </form>
+                    {% with messages = get_flashed_messages(with_categories=true) %} {% if messages %}
+                    <div>
+                        {% for category, message in messages %}
+                        <p class="newsletter-flash-{{ category }}">{{ message }}</p>
+                        {% endfor %}
+                    <div>
+                    {% endif %} {% endwith %}
                 </div>
             </div>
         </div>
