--- a/static/css/style.css
+++ b/static/css/style.css
@@ -492,15 +492,17 @@ form p {
 }
 
 .newsletter-flash-main, .newsletter-flash-success, .newsletter-flash-error {
-  height: 20px;
+  height: 36px;
   border: 1px solid #FF3366;
   background-color: rgba(255, 172, 193, 0.6);
-  border-radius: 5px;
+  border-radius: 25px;
   text-align: left;
+  margin-top: 15px;
 }
 .newsletter-flash-main p, .newsletter-flash-success p, .newsletter-flash-error p {
   margin: 0;
   padding: 0.5rem;
+  padding-left: 20px;
   font-size: 0.85rem;
   font-weight: 400;
 }
