Flash messages classes replaced with classes match to flash message category

--- a/scss/components/forms/contact-form.scss
+++ b/scss/components/forms/contact-form.scss
@@ -19,3 +19,22 @@
 .main-button {
     order: 2;
 }
+
+// flash message style
+.flash-contact-success {
+    display: block !important;
+    height: 38px;
+    width: 100%;
+    border: 1px solid #5aac17;
+    background-color: rgba(230, 255, 204, 0.6);
+    border-radius: 5px;
+    text-align: left;
+
+    p {
+        margin: 0;
+        padding: 0.5rem 1.25rem;
+        font-size: 0.85rem;
+        font-weight: 400;
+        color: #5aac17;
+    }
+}
