--- a/scss/components/footer/footer.scss
+++ b/scss/components/footer/footer.scss
@@ -110,39 +110,31 @@
     cursor: pointer;
 }
 
-// nesletter flash calesses
-.newsletter-flash-main {
-    height: 36px;
-    border: 1px solid #FF3366;
-    background-color: rgba(255, 172, 193, 0.6);
-    border-radius: 25px;
+// flash message style
+.flash-contact-success {
+    display: block !important;
+    height: 38px;
+    width: 100%;
+    border: 1px solid #5aac17;
+    background-color: rgba(230, 255, 204, 0.6);
+    border-radius: 5px;
     text-align: left;
-    margin-top: 15px;
 
     p {
         margin: 0;
-        padding: 0.5rem;
-        padding-left: 20px;
+        padding: 0.5rem 1.25rem;
         font-size: 0.85rem;
         font-weight: 400;
+        color: #5aac17;
     }
 }
 
-.newsletter-flash-error {
-    @extend .newsletter-flash-main;
+.flash-newsletter-error {
+    @extend .flash-contact-success;
     border: 1px solid #FF3366;
     background-color: rgba(255, 172, 193, 0.6);
     p {
         color: #FF3366;
-    }
-}
-
-.newsletter-flash-success {
-    @extend .newsletter-flash-main;
-    border: 1px solid #5aac17;
-    background-color: rgba(230, 255, 204, 0.6);
-    p {
-        color: #5aac17;
     }
 }
 
