--- a/scss/components/forms/recovery-form.scss
+++ b/scss/components/forms/recovery-form.scss
@@ -5,3 +5,31 @@
 .main-form-container {
     width: 350px;
 }
+
+// flash message style
+.flash-recovery-success {
+    display: block !important;
+    height: 38px;
+    width: 100%;
+    border: 1px solid #5aac17;
+    background-color: rgba(230, 255, 204, 0.6);
+    border-radius: 5px;
+    text-align: left;
+
+    p {
+        margin: 0;
+        padding: 0.5rem 1.25rem;
+        font-size: 0.85rem;
+        font-weight: 400;
+        color: #5aac17;
+    }
+}
+
+.flash-recovery-error {
+    @extend .flash-contact-success;
+    border: 1px solid #FF3366;
+    background-color: rgba(255, 172, 193, 0.6);
+    p {
+        color: #FF3366;
+    }
+}
