Flash messages error filtering by category applied due to multiple messages show when code execute

--- a/scss/components/forms/contact-form.scss
+++ b/scss/components/forms/contact-form.scss
@@ -21,7 +21,7 @@
 }
 
 // flash message style
-.flash-contact-success {
+.flash-contact-send{
     display: block !important;
     height: 38px;
     width: 100%;
