--- a/scss/components/footer/footer.scss
+++ b/scss/components/footer/footer.scss
@@ -111,7 +111,7 @@
 }
 
 // flash message style
-.flash-contact-success {
+.flash-newsletter-success {
     display: block !important;
     height: 38px;
     width: 100%;
@@ -130,7 +130,7 @@
 }
 
 .flash-newsletter-error {
-    @extend .flash-contact-success;
+    @extend .flash-newsletter-success;
     border: 1px solid #FF3366;
     background-color: rgba(255, 172, 193, 0.6);
     p {
