--- a/templates/components/footer/footer.html
+++ b/templates/components/footer/footer.html
@@ -33,11 +33,20 @@
                         <button type="submit" class="button" id="newsletter-button">Subscribe</button>
                     </form>
                     <!-- flash message container -->
-                    {% with messages = get_flashed_messages(with_categories=true) %} {% if messages %} {% for category, message in messages %}
-                    <div class="newsletter-flash-{{ category }} " role="alert">
-                        <p>{{ message }}</p>
-                    </div>
-                    {% endfor %} {% endif %} {% endwith %}
+                {% with errors = get_flashed_messages(category_filter=["newsletter-success"]) %} {% if errors %}
+                <div class="flash-newsletter-success">
+                    {%- for msg in errors %}
+                    <p>{{ msg }}</p>
+                    {% endfor -%}
+                </div>
+                {% endif %} {% endwith %} 
+                {% with errors = get_flashed_messages(category_filter=["newsletter-error"]) %} {% if errors %}
+                <div class="flash-newsletter-errir">
+                    {%- for msg in errors %}
+                    <p>{{ msg }}</p>
+                    {% endfor -%}
+                </div>
+                {% endif %} {% endwith %} 
                 </div>
             </div>
         </div>
