--- a/templates/components/forms/recovery-form.html
+++ b/templates/components/forms/recovery-form.html
@@ -6,11 +6,20 @@
         <form id="recovery-form" name="recovery-form" action="{{ url_for('recovery') }}" method="POST">
             <!-- Register form title -->
             <div class="form-group">
-                {% with messages = get_flashed_messages(with_categories=true) %} {% if messages %} {% for category, message in messages %}
-                <div class="alert-{{category}}">
-                    <p>{{ message }}</p>
+                {% with errors = get_flashed_messages(category_filter=["recovery-positive"]) %} {% if errors %}
+                <div class="flash-recovery-positive">
+                    {%- for msg in errors %}
+                    <p>{{ msg }}</p>
+                    {% endfor -%}
                 </div>
-                {% endfor %} {% endif %} {% endwith %}
+                {% endif %} {% endwith %} 
+                {% with errors = get_flashed_messages(category_filter=["recovery-negative"]) %} {% if errors %}
+                <div class="flash-recovery-negative">
+                    {%- for msg in errors %}
+                    <p>{{ msg }}</p>
+                    {% endfor -%}
+                </div>
+                {% endif %} {% endwith %}
                 <h3 class="form-second-title">Password recovery</h3>
                 <p>Forgot your password ? <br> Don't worry, simply type your email address and we will send your password back.</p>
             </div>
