Flash messages style corrected

--- a/scss/components/forms/register-form.scss
+++ b/scss/components/forms/register-form.scss
@@ -1,6 +1,7 @@
 .register-form {
     padding-top: 100px;
 }
+
 .main-form-container {
     width: 350px;
 
@@ -8,8 +9,7 @@
 
 // flash message style
 .flash-register-added {
-    display: block !important;
-    height: 38px;
+    height: 58px;
     width: 100%;
     border: 1px solid #5aac17;
     background-color: rgba(230, 255, 204, 0.6);
@@ -18,7 +18,7 @@
 
     p {
         margin: 0;
-        padding: 0.5rem 1.25rem;
+        padding: 0.5rem;
         font-size: 0.85rem;
         font-weight: 400;
         color: #5aac17;
@@ -27,6 +27,7 @@
 
 .flash-register-exist {
     @extend .flash-register-added;
+    height: 78px;
     border: 1px solid #FF3366;
     background-color: rgba(255, 172, 193, 0.6);
     p {
