--- a/scss/components/footer/footer.scss
+++ b/scss/components/footer/footer.scss
@@ -112,7 +112,7 @@
 
 // flash message style
 .flash-newsletter-success {
-    display: block !important;
+    margin-top: 15px;
     height: 38px;
     width: 100%;
     border: 1px solid #5aac17;
@@ -122,7 +122,7 @@
 
     p {
         margin: 0;
-        padding: 0.5rem 1.25rem;
+        padding: 0.5rem;
         font-size: 0.85rem;
         font-weight: 400;
         color: #5aac17;
