--- a/scss/components/forms/recovery-form.scss
+++ b/scss/components/forms/recovery-form.scss
@@ -8,8 +8,7 @@
 
 // flash message style
 .flash-recovery-positive {
-    display: block !important;
-    height: 38px;
+    height: 58px;
     width: 100%;
     border: 1px solid #5aac17;
     background-color: rgba(230, 255, 204, 0.6);
@@ -18,7 +17,7 @@
 
     p {
         margin: 0;
-        padding: 0.5rem 1.25rem;
+        padding: 0.5rem;
         font-size: 0.85rem;
         font-weight: 400;
         color: #5aac17;
@@ -27,6 +26,7 @@
 
 .flash-recovery-negative {
     @extend .flash-recovery-positive;
+    height: 78px;
     border: 1px solid #FF3366;
     background-color: rgba(255, 172, 193, 0.6);
     p {
