--- a/static/css/style.css
+++ b/static/css/style.css
@@ -265,7 +265,6 @@ form p {
 }
 
 .flash-contact-send {
-  display: block !important;
   height: 38px;
   width: 100%;
   border: 1px solid #5aac17;
@@ -366,8 +365,7 @@ form p {
 }
 
 .flash-recovery-positive, .flash-recovery-negative {
-  display: block !important;
-  height: 38px;
+  height: 58px;
   width: 100%;
   border: 1px solid #5aac17;
   background-color: rgba(230, 255, 204, 0.6);
@@ -376,13 +374,14 @@ form p {
 }
 .flash-recovery-positive p, .flash-recovery-negative p {
   margin: 0;
-  padding: 0.5rem 1.25rem;
+  padding: 0.5rem;
   font-size: 0.85rem;
   font-weight: 400;
   color: #5aac17;
 }
 
 .flash-recovery-negative {
+  height: 78px;
   border: 1px solid #FF3366;
   background-color: rgba(255, 172, 193, 0.6);
 }
@@ -399,8 +398,7 @@ form p {
 }
 
 .flash-register-added, .flash-register-exist {
-  display: block !important;
-  height: 38px;
+  height: 58px;
   width: 100%;
   border: 1px solid #5aac17;
   background-color: rgba(230, 255, 204, 0.6);
@@ -409,13 +407,14 @@ form p {
 }
 .flash-register-added p, .flash-register-exist p {
   margin: 0;
-  padding: 0.5rem 1.25rem;
+  padding: 0.5rem;
   font-size: 0.85rem;
   font-weight: 400;
   color: #5aac17;
 }
 
 .flash-register-exist {
+  height: 78px;
   border: 1px solid #FF3366;
   background-color: rgba(255, 172, 193, 0.6);
 }
@@ -530,7 +529,7 @@ form p {
 }
 
 .flash-newsletter-success, .flash-newsletter-error {
-  display: block !important;
+  margin-top: 15px;
   height: 38px;
   width: 100%;
   border: 1px solid #5aac17;
@@ -540,7 +539,7 @@ form p {
 }
 .flash-newsletter-success p, .flash-newsletter-error p {
   margin: 0;
-  padding: 0.5rem 1.25rem;
+  padding: 0.5rem;
   font-size: 0.85rem;
   font-weight: 400;
   color: #5aac17;
