Flash messages heigh set to 'auto'

--- a/scss/components/forms/contact-form.scss
+++ b/scss/components/forms/contact-form.scss
@@ -22,7 +22,7 @@
 
 // flash message style
 .flash-contact-send{
-    height: 38px;
+    height: auto;
     width: 100%;
     border: 1px solid #5aac17;
     background-color: rgba(230, 255, 204, 0.6);
