--- a/scss/components/footer/footer.scss
+++ b/scss/components/footer/footer.scss
@@ -113,7 +113,7 @@
 // flash message style
 .flash-newsletter-success {
     margin-top: 15px;
-    height: 38px;
+    height: auto;
     width: 100%;
     border: 1px solid #5aac17;
     background-color: rgba(230, 255, 204, 0.6);
