--- a/scss/components/forms/register-form.scss
+++ b/scss/components/forms/register-form.scss
@@ -9,7 +9,7 @@
 
 // flash message style
 .flash-register-added {
-    height: 58px;
+    height: auto;
     width: 100%;
     border: 1px solid #5aac17;
     background-color: rgba(230, 255, 204, 0.6);
@@ -27,7 +27,6 @@
 
 .flash-register-exist {
     @extend .flash-register-added;
-    height: 78px;
     border: 1px solid #FF3366;
     background-color: rgba(255, 172, 193, 0.6);
     p {
