--- a/templates/components/header/nav.html
+++ b/templates/components/header/nav.html
@@ -17,7 +17,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li><a href="{{url_for('recipes')}}" class="hvr-underline-from-left">Recipes</a></li>
-        <li><a href="{{url_for('favourites')}}" class="hvr-underline-from-left"><i class="far fa-heart fav-heart-icon"></i>Favourites</a></li>
+        <li><a href="{{url_for('top_hundredd')}}" class="hvr-underline-from-left"><i class="far fa-heart fav-heart-icon"></i>Top 100</a></li>
         <li><a href="{{url_for('equipment')}}" class="hvr-underline-from-left">Equipment</a></li>
         <li><a href="{{url_for('contact')}}" class="hvr-underline-from-left">Contact</a></li>
       </ul>
