--- a/static/css/style.css
+++ b/static/css/style.css
@@ -445,6 +445,11 @@ form p {
   font-size: 0.85rem;
 }
 
+#edamam-badge img {
+  height: 30px !important;
+  width: 150px;
+}
+
 .footer-menu {
   padding: 0;
   margin-bottom: 20px;
