Required API element added to footer

--- a/templates/components/footer/footer.html
+++ b/templates/components/footer/footer.html
@@ -10,7 +10,8 @@
                 <h4>Baking Master Web Application</h4>
                 <!-- About app section -->
                 <p class="about-website">This web app was created for studying purposes only. You can find here lots of different baking recipes, lots of great ideas how to surprise your friends or family, with your sweet cakes, muffins or even fresh baked bread with seeds. Also
-                    you can find necessary equipemnt to help you become baking master of your home! Save your favourite recipes, create new, edit or remove, if you don't want to share them to world..<br><span class="footer-greetings">Enjoy browsing all recipes!</span></p>
+                    you can find necessary equipemnt to help you become baking master of your home! Save your favourite recipes, create new, edit or remove, if you don't want to share them to world..<br><span class="footer-greetings">Enjoy browsing all recipes!</span>
+                <div id="edamam-badge" data-color="transparent"></div></p>
             </div>
             <!-- Footer menu -->
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
@@ -33,20 +34,19 @@
                         <button type="submit" class="button" id="newsletter-button">Subscribe</button>
                     </form>
                     <!-- flash message container -->
-                {% with errors = get_flashed_messages(category_filter=["newsletter-success"]) %} {% if errors %}
-                <div id="flash-message" class="flash-newsletter-success">
-                    {%- for msg in errors %}
-                    <p>{{ msg }}</p>
-                    {% endfor -%}
-                </div>
-                {% endif %} {% endwith %} 
-                {% with errors = get_flashed_messages(category_filter=["newsletter-error"]) %} {% if errors %}
-                <div  id="flash-message" class="flash-newsletter-error">
-                    {%- for msg in errors %}
-                    <p>{{ msg }}</p>
-                    {% endfor -%}
-                </div>
-                {% endif %} {% endwith %} 
+                    {% with errors = get_flashed_messages(category_filter=["newsletter-success"]) %} {% if errors %}
+                    <div id="flash-message" class="flash-newsletter-success">
+                        {%- for msg in errors %}
+                        <p>{{ msg }}</p>
+                        {% endfor -%}
+                    </div>
+                    {% endif %} {% endwith %} {% with errors = get_flashed_messages(category_filter=["newsletter-error"]) %} {% if errors %}
+                    <div id="flash-message" class="flash-newsletter-error">
+                        {%- for msg in errors %}
+                        <p>{{ msg }}</p>
+                        {% endfor -%}
+                    </div>
+                    {% endif %} {% endwith %}
                 </div>
             </div>
         </div>
