Required script added for API Edamam

--- a/templates/layout/scripts.html
+++ b/templates/layout/scripts.html
@@ -3,3 +3,5 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <!-- Personal script file -->
 <script type="text/javascript" src="{{url_for('static',filename='js/script.js')}}"></script>
+<!-- API Edamam attribution required script -->
+<script src="https://developer.edamam.com/attribution/badge.js"></script>
