--- a/templates/components/header/nav.html
+++ b/templates/components/header/nav.html
@@ -1,5 +1,5 @@
 <!-- main container -->
-<nav class="navbar navbar-inverse">
+<nav id="#main-nav" class="navbar navbar-inverse">
   <div class="container">
     <div class="navbar-header">
       <!-- dropdown 'hamburger' button -->
@@ -16,15 +16,15 @@
     <!-- collapse nav -->
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li><a href="{{url_for('recipes')}}" class="hvr-underline-from-left">Recipes</a></li>
-        <li><a href="{{url_for('top_hundredd')}}" class="hvr-underline-from-left"><i class="far fa-heart fav-heart-icon"></i>Top 100</a></li>
-        <li><a href="{{url_for('equipment')}}" class="hvr-underline-from-left">Equipment</a></li>
-        <li><a href="{{url_for('contact')}}" class="hvr-underline-from-left">Contact</a></li>
+        <li><a href="{{url_for('recipes')}}" class="{{ 'active-link' if page == 'recipes' else 'hvr-underline-from-left'}}">Recipes</a></li>
+        <li><a href="{{url_for('top_hundredd')}}" class="{{ 'active-link' if page == 'top-hundred' else 'hvr-underline-from-left'}}"><i class="far fa-heart fav-heart-icon"></i>Top 100</a></li>
+        <li><a href="{{url_for('equipment')}}" class="{{ 'active-link' if page == 'equipment' else 'hvr-underline-from-left'}}">Equipment</a></li>
+        <li><a href="{{url_for('contact')}}" class="{{ 'active-link' if page == 'contact' else 'hvr-underline-from-left'}}">Contact</a></li>
       </ul>
       <!-- search and login links -->
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="{{url_for('register')}}" class="hvr-underline-from-left">Register</a></li>
-        <li><a href="{{url_for('login')}}" class="hvr-underline-from-left">Login</a></li>
+        <li><a href="{{url_for('register')}}" class="{{ 'active-link' if page == 'register' else 'hvr-underline-from-left'}}">Register</a></li>
+        <li><a href="{{url_for('login')}}" class="{{ 'active-link' if page == 'login' else 'hvr-underline-from-left'}}">Login</a></li>
       </ul>
     </div>
   </div>
