Set 'page' class added to each page to applied active-link style on click

--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -1,4 +1,4 @@
-{% extends 'layout/base.html' %} {% block content %}
+{% extends 'layout/base.html' %} {% set page = "contact" %} {% block content %}
 <div class="container contact-flex sticky-footer map-container">
     <h1 class="hidden">Contact Page</h1>
     {% include 'components/forms/contact-form.html' %}
