--- a/templates/pages/register.html
+++ b/templates/pages/register.html
@@ -1,4 +1,4 @@
-{% extends 'layout/base.html' %} {% block content %}
+{% extends 'layout/base.html' %} {% set page = "register" %} {% block content %}
 <div class="container register-flex sticky-footer">
     <h1 class="hidden">Register Page</h1>
     {% include 'components/forms/register-form.html' %}
