--- a/templates/pages/login.html
+++ b/templates/pages/login.html
@@ -1,4 +1,4 @@
-{% extends 'layout/base.html' %} {% block content %}
+{% extends 'layout/base.html' %} {% set page = "login" %} {% block content %}
 <div class="container login-flex sticky-footer">
     <h1 class="hidden">Login Page</h1>
     {% include 'components/forms/login-form.html' %}
