--- a/templates/pages/recipes.html
+++ b/templates/pages/recipes.html
@@ -1,3 +1,3 @@
-{% extends 'layout/base.html' %} {% block content %}
+{% extends 'layout/base.html' %} {% set page = "recipes" %} {% block content %}
 <h1 class="hidden">All Recipes</h1>
 {% endblock %}
