--- a/templates/pages/top-hundred.html
+++ b/templates/pages/top-hundred.html
@@ -1,3 +1,3 @@
-{% extends 'layout/base.html' %} {% block content %}
+{% extends 'layout/base.html' %} {% set page = "top-hundred" %} {% block content %}
 <h1 class="hidden">Top Hundred Recipes</h1>
 {% endblock %}
